[gd_scene load_steps=2 format=3 uid="uid://2nnk6symldku"]

[ext_resource type="Script" uid="uid://b2uhhpp3yfs4" path="res://brain.gd" id="1_x2cbc"]

[node name="Brain" type="Node"]
script = ExtResource("1_x2cbc")

[node name="Button" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "Crush +=1"

[node name="Button2" type="Button" parent="."]
offset_left = 96.0
offset_top = 2.0
offset_right = 177.0
offset_bottom = 33.0
text = "Crush -=1"

[node name="Label" type="Label" parent="."]
offset_left = 74.0
offset_top = 48.0
offset_right = 104.0
offset_bottom = 77.0
text = "0"

[node name="Save" type="Button" parent="."]
offset_left = 13.0
offset_top = 89.0
offset_right = 57.0
offset_bottom = 120.0
text = "Save"

[node name="Load" type="Button" parent="."]
offset_left = 107.0
offset_top = 90.0
offset_right = 153.0
offset_bottom = 121.0
text = "Load"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed_plus"]
[connection signal="pressed" from="Button2" to="." method="_on_button_pressed_minus"]
[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_load_pressed"]
